--- a/static/styles/windows_style.css
+++ b/static/styles/windows_style.css
@@ -23,3 +23,11 @@
         background: white;
       }
 #main:target {display: block;}
+
+.center {
+  display: block;
+  margin-left: auto;
+  margin-right: auto;
+  width: 100%;
+  width: 10;
+}
