--- a/templates/index.html
+++ b/templates/index.html
@@ -24,40 +24,38 @@
 </div>
 <h1>Предложения обмена</h1>
 {% for item in advertisement%}
-{% if ((search['title'] in item.title or not search['title']) and (search['author'] == item.user.email or not search['author']))%}
-<div class="col-md6 border rounded" style="padding:1% 2%; margin:1% 2%; background: white;">
-    <div class="row align-items-center">
-        <div class="col-2">
-            <img src="{{url_for('static', filename=item.file)}}" alt="В этом виноват Рома" class="w-100 h-100">
-        </div>
-        <div class="col-8">
-            <h2>{{item.title}}</h2>
-            <div>
-                {{item.content}}
+{% if ((search['title'] in item.title.lower() or not search['title']) and
+(search['author'] == item.user.email or not search['author']))%}
+    <div class="col-md6 border rounded" style="padding:1% 2%; margin:1% 2%; background: white;">
+        <div class="row align-items-center">
+            <div class="col-2" style="cursor: pointer;" onclick="location.href='/advertisement/{{item.id}}';">
+                <img src="{{url_for('static', filename=item.file)}}" alt="В этом виноват Рома" class="w-100 h-100">
             </div>
-            Автор - {{item.user.name}}, Дата написания - {{item.created_date.strftime("%m-%d-%Y %H:%M")}}
-            <div>
-                {{item.file.split('/')[1]}}
+            <div class="col-8">
+                <h2 style="cursor: pointer;" onclick="location.href='/advertisement/{{item.id}}';">{{item.title}}</h2>
+                Автор - {{item.user.name}}, Дата написания - {{item.created_date.strftime("%m-%d-%Y %H:%M")}}
+                <div>
+                    {{item.file.split('/')[1]}}
+                </div>
+                {% if current_user.is_authenticated and current_user == item.user %}
+                <div>
+                    <a href="/advertisement/{{ item.id }}" class="btn btn-warning">
+                        Изменить
+                    </a>
+                    <a href="/advertisement_delete/{{ item.id }}" class="btn btn-danger">
+                        Удалить
+                    </a>
+                </div>
+                {% else %}
+                <div class="col-2">
+                    <a href="/chat/{{ item.user.id }}" class="btn btn-success">
+                        Чат с пользователем
+                    </a>
+                </div>
+                {% endif %}
             </div>
-            {% if current_user.is_authenticated and current_user == item.user %}
-            <div>
-                <a href="/advertisement/{{ item.id }}" class="btn btn-warning">
-                    Изменить
-                </a>
-                <a href="/advertisement_delete/{{ item.id }}" class="btn btn-danger">
-                    Удалить
-                </a>
-            </div>
-            {% else %}
-            <div class="col-2">
-                <a href="/chat/{{ item.user.id }}" class="btn btn-success">
-                    Чат с пользователем
-                </a>
-            </div>
-            {% endif %}
         </div>
     </div>
-</div>
 {% endif %}
 {% endfor %}
 
