--- a/templates/base.html
+++ b/templates/base.html
@@ -1,5 +1,5 @@
 <!doctype html>
-<html lang="ru">
+<html lang="en">
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
@@ -13,42 +13,30 @@
 <body background="/static/img/backGround.png" style="margin-top:0px">
 <header style="background-color: #e3f2fd;">
     <nav class="navbar navbar-expand-lg navbar-light">
-        <div class="container-fluid">
-            <a class="navbar-brand" href="/"><b>Provito</b></a>
-            {% if current_user.is_authenticated %}
-            <div class="collapse navbar-collapse">
-                <div class="navbar-nav">
-                    <a style="margin-right: 15px" class="nav-link active" aria-current="page" href="/advertisement"><b>создать
-                        обьявление</b></a>
-                    <a style="margin-right: 15px" class="nav-link active" aria-current="page" href="/chat/0"><b>Чаты</b></a>
-                    <a style="margin-right: 15px" class="nav-link active" aria-current="page"
-                       href="/authors"><b>авторы</b></a>
-                    <a class="nav-link active" aria-current="page" href="/settings"><b>личный кабинет</b></a>
-                </div>
-                {% else %}
-                <p>
-                    <a class="btn btn-primary " href="/register">Зарегистрироваться</a>
-                    <a class="btn btn-success" href="/login">Войти</a>
-                </p>
-                {% endif %}
-            </div>
-            {% if url == '/' or '/search' in url %}
-            <form method="post" class="d-flex" role="search" enctype="multipart/form-data" action="">
-                {{ form.hidden_tag() }}
-                {{ form.search(class="form-control") }}
-                {{form.submit(type="submit", class="btn btn-primary")}}
-                <!--
-                <input class="form-control me-2" type="search" placeholder="Поиск" aria-label="Search">
-                <button class="btn btn-outline-success" type="submit">Поиск</button>
-                -->
-                {% for error in form.search.errors %}
-                <p class="alert alert-danger" role="alert">
-                    {{ error }}
-                </p>
-                {% endfor %}
-            </form>
-            {% endif %}
+      <div class="container-fluid">
+        <a class="navbar-brand" href="/"><b>Provito</b></a>
+          {% if current_user.is_authenticated %}
+        <div class="collapse navbar-collapse">
+          <div class="navbar-nav">
+              <a style="margin-right: 15px" class="nav-link active" aria-current="page" href="/advertisement"><b>создать обьявление</b></a>
+            <a style="margin-right: 15px" class="nav-link active" aria-current="page" href="/chat/0"><b>Чаты</b></a>
+            <a style="margin-right: 15px" class="nav-link active" aria-current="page" href="/authors"><b>авторы</b></a>
+            <a class="nav-link active" aria-current="page" href="/settings"><b>личный кабинет</b></a>
+          </div>
+          {% else %}
+          <div class="collapse navbar-collapse">
+              <p>
+                  <a class="btn btn-primary " href="/register">Зарегистрироваться</a>
+                  <a class="btn btn-success" href="/login">Войти</a>
+              </p>
+          </div>
+          {% endif %}
         </div>
+        <form class="d-flex" role="search">
+            <input class="form-control me-2" type="search" placeholder="Поиск" aria-label="Search">
+            <button class="btn btn-outline-success" type="submit">Поиск</button>
+        </form>
+      </div>
     </nav>
 </header>
 <a href="#" id="main" class="col-md6 border rounded">
