--- a/templates/chat_room.html
+++ b/templates/chat_room.html
@@ -18,9 +18,11 @@
                     {% for user in previous %}
                     <li class="active bounceInDown">
                         <a href="/chat/{{user.id}}" class="clearfix">
+                            <img src="{{ user.avatar }}" alt="" class="img-circle">
                             <div class="friend-name">
                                 <strong>{{ user.name }}</strong>
                             </div>
+                            <div class="last-message text-muted">{{ lm[user.id] }}</div>
                         </a>
                     </li>
                     {% endfor %}
@@ -37,7 +39,7 @@
                         {% if message['id'] == other.id %}
                         <li class="left clearfix">
 <span class="chat-img pull-left">
-<img src="https://bootdey.com/img/Content/user_3.jpg" alt="User Avatar">
+<img src="{{ other.avatar }}" alt="User Avatar">
 </span>
                             <div class="chat-body clearfix">
                                 <div class="header">
@@ -52,7 +54,7 @@
                         {% else %}
                         <li class="right clearfix">
 <span class="chat-img pull-right">
-<img src="https://bootdey.com/img/Content/user_1.jpg" alt="User Avatar">
+<img src="{{ cur.avatar }}" alt="User Avatar">
 </span>
                             <div class="chat-body clearfix">
                                 <div class="header">
